# media_organizer

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/worfklows/: ci-cd.yml
.github/workflows/: ci-cd.yml  pylint.yml
media_organizer/: config.py  date_fetcher.py  enums.py  file_utils.py  media_organizer.py  xmp_utils.py
tests/: create_img.py  create_video.py  test_date_fetcher.py  test_media_organizer.py  test_xmp_utils.py
tests/resources/: 20240922-152718-090.ARW.xmp
